@@ -20,6 +20,7 @@ package io.sapl.test.integration;
 import io.sapl.api.interpreter.PolicyEvaluationException;
 import io.sapl.api.pdp.AuthorizationSubscription;
 import io.sapl.attributes.broker.impl.CachingAttributeStreamBroker;
+import io.sapl.attributes.broker.impl.InMemoryAttributeRepository;
 import io.sapl.interpreter.SAPLInterpreter;
 import io.sapl.interpreter.context.AuthorizationContext;
 import io.sapl.interpreter.functions.AnnotationFunctionContext;
@@ -39,6 +40,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 import reactor.test.StepVerifier;
 
 import java.nio.file.Paths;
+import java.time.Clock;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -50,8 +52,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.collection.IsEmptyCollection.empty;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 
 class ClasspathPolicyRetrievalPointTests {
@@ -72,7 +73,8 @@ class ClasspathPolicyRetrievalPointTests {
         final var authzSubscription = AuthorizationSubscription.of("WILLI", "access", "foo", "");
         final var prpResult         = prp.retrievePolicies().contextWrite(ctx -> {
                                         ctx = AuthorizationContext.setAttributeStreamBroker(ctx,
-                                                new CachingAttributeStreamBroker());
+                                                new CachingAttributeStreamBroker(
+                                                        new InMemoryAttributeRepository(Clock.systemUTC())));
                                         ctx = AuthorizationContext.setFunctionContext(ctx,
                                                 new AnnotationFunctionContext());
                                         ctx = AuthorizationContext.setVariables(ctx, new HashMap<>());
@@ -120,7 +122,8 @@ class ClasspathPolicyRetrievalPointTests {
         final var prp = new ClasspathPolicyRetrievalPoint(Paths.get(path), this.interpreter);
 
         final var result = prp.retrievePolicies().contextWrite(ctx -> {
-            ctx = AuthorizationContext.setAttributeStreamBroker(ctx, new CachingAttributeStreamBroker());
+            ctx = AuthorizationContext.setAttributeStreamBroker(ctx,
+                    new CachingAttributeStreamBroker(new InMemoryAttributeRepository(Clock.systemUTC())));
             ctx = AuthorizationContext.setFunctionContext(ctx, new AnnotationFunctionContext());
             ctx = AuthorizationContext.setVariables(ctx, new HashMap<>());
             return AuthorizationContext.setSubscriptionVariables(ctx, EMPTY_SUBSCRIPTION);
@@ -139,7 +142,8 @@ class ClasspathPolicyRetrievalPointTests {
         final var authzSubscription1 = AuthorizationSubscription.of(null, "read", null);
         final var result1            = prp.retrievePolicies().contextWrite(ctx -> {
                                          ctx = AuthorizationContext.setAttributeStreamBroker(ctx,
-                                                 new CachingAttributeStreamBroker());
+                                                 new CachingAttributeStreamBroker(
+                                                         new InMemoryAttributeRepository(Clock.systemUTC())));
                                          ctx = AuthorizationContext.setFunctionContext(ctx,
                                                  new AnnotationFunctionContext());
                                          ctx = AuthorizationContext.setVariables(ctx, new HashMap<>());
@@ -152,12 +156,13 @@ class ClasspathPolicyRetrievalPointTests {
         assertThat(result1.getMatchingDocuments().size(), is(1));
         assertThat(result1.isRetrievalWithErrors(), is(false));
 
-        assertThat(result1.getMatchingDocuments().get(0).document().name(), is("policy read"));
+        assertThat(result1.getMatchingDocuments().getFirst().document().name(), is("policy read"));
 
         final var authzSubscription2 = AuthorizationSubscription.of("Willi", "eat", "ice cream");
 
         final var result2 = prp.retrievePolicies().contextWrite(ctx -> {
-            ctx = AuthorizationContext.setAttributeStreamBroker(ctx, new CachingAttributeStreamBroker());
+            ctx = AuthorizationContext.setAttributeStreamBroker(ctx,
+                    new CachingAttributeStreamBroker(new InMemoryAttributeRepository(Clock.systemUTC())));
             ctx = AuthorizationContext.setFunctionContext(ctx, new AnnotationFunctionContext());
             ctx = AuthorizationContext.setVariables(ctx, new HashMap<>());
             ctx = AuthorizationContext.setSubscriptionVariables(ctx, authzSubscription2);
@@ -169,7 +174,7 @@ class ClasspathPolicyRetrievalPointTests {
         assertThat(result2.isRetrievalWithErrors(), is(false));
         assertThat(result2.isPrpInconsistent(), is(false));
 
-        assertThat(result2.getMatchingDocuments().get(0).document().name(), is("policy eat ice cream"));
+        assertThat(result2.getMatchingDocuments().getFirst().document().name(), is("policy eat ice cream"));
     }
 
     @Test
@@ -178,12 +183,14 @@ class ClasspathPolicyRetrievalPointTests {
         final var authzSubscription = AuthorizationSubscription.of("WILLI", "access", "foo", "");
 
         final var result = prp.retrievePolicies().contextWrite(ctx -> {
-            ctx = AuthorizationContext.setAttributeStreamBroker(ctx, new CachingAttributeStreamBroker());
+            ctx = AuthorizationContext.setAttributeStreamBroker(ctx,
+                    new CachingAttributeStreamBroker(new InMemoryAttributeRepository(Clock.systemUTC())));
             ctx = AuthorizationContext.setFunctionContext(ctx, new AnnotationFunctionContext());
             ctx = AuthorizationContext.setVariables(ctx, new HashMap<>());
             return AuthorizationContext.setSubscriptionVariables(ctx, authzSubscription);
         }).block();
 
+        assertNotNull(result);
         Assertions.assertThat(result.isRetrievalWithErrors()).isTrue();
     }
 
@@ -193,7 +200,8 @@ class ClasspathPolicyRetrievalPointTests {
         private PolicyRetrievalResult getResultFromPRP(final PolicyRetrievalPoint policyRetrievalPoint,
                 final AuthorizationSubscription authorizationSubscription) {
             return policyRetrievalPoint.retrievePolicies().contextWrite(ctx -> {
-                ctx = AuthorizationContext.setAttributeStreamBroker(ctx, new CachingAttributeStreamBroker());
+                ctx = AuthorizationContext.setAttributeStreamBroker(ctx,
+                        new CachingAttributeStreamBroker(new InMemoryAttributeRepository(Clock.systemUTC())));
                 ctx = AuthorizationContext.setFunctionContext(ctx, new AnnotationFunctionContext());
                 ctx = AuthorizationContext.setVariables(ctx, Collections.emptyMap());
                 return AuthorizationContext.setSubscriptionVariables(ctx, authorizationSubscription);
@@ -316,7 +324,7 @@ class ClasspathPolicyRetrievalPointTests {
 
             assertThat(result, notNullValue());
             assertThat(result.getMatchingDocuments().size(), is(1));
-            assertThat(result.getMatchingDocuments().get(0).document().name(), is("policy eat ice cream"));
+            assertThat(result.getMatchingDocuments().getFirst().document().name(), is("policy eat ice cream"));
             assertThat(result.isRetrievalWithErrors(), is(true));
             assertThat(result.isPrpInconsistent(), is(false));
         }
